--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </header>
 
 <section class="hero">
-  <h1>Connecting people for common profit</h1>
+  <h1>Connecting good people for common profit</h1>
   <p>Commodity brokerage of grains, pulses and oilseeds from Ukraine and the Black Sea region</p>
 </section>
 
